# ALX-solutions

./: Clean-coding-with-PEP-8.ipynb  Code_challenge_Integrated_Project_P1_student_version.ipynb  Integrated_Project_P2_EDA_and_data_validation_notebook.ipynb  README.md  app.py  commands.txt  main.py  pyproject.toml
exercises/: Introduction_to_NumPy_Exercise.ipynb
