[project]
name = "alx-solutions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.57.0",
]
